# ALPHA-EDGE

./: .env.example  .gitignore  .pylintrc  ALPHAEDGE_PLAN_ACTION_AUDIT.md  ALPHAEDGE_POST_AUDIT_ACTION_PLAN.md  ALPHAEDGE_STRUCTURAL_ACTION_PLAN.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  config.yaml  mypy.ini  mypy_errors.txt  mypy_errors2.txt  pylint_out.txt  pylint_output.txt  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/prompts/: add-test.prompt.md  cython-build.prompt.md  new-util.prompt.md
.github/skills/cython-build/: SKILL.md
.github/workflows/: ci.yml
alphaedge/: __init__.py
alphaedge/config/: __init__.py  constants.py  loader.py
alphaedge/core/: __init__.py  __init__.pyi  engulfing_detector.pyx  fcr_detector.pyx  gap_detector.pyx  order_manager.pyx  risk_manager.pyx
alphaedge/core/_stubs/: __init__.py  engulfing_detector.py  fcr_detector.py  gap_detector.py  order_manager.py  risk_manager.py
alphaedge/engine/: __init__.py  backtest.py  backtest_export.py  backtest_stats.py  backtest_types.py  broker.py  dashboard.py  data_feed.py  ml_filter.py  monte_carlo.py  position_manager.py  sensitivity.py  session_lifecycle.py  signal_pipeline.py  strategy.py  walk_forward.py  web_dashboard.py
alphaedge/logs/: __init__.py
alphaedge/stubs/: ib_insync.pyi
alphaedge/tests/: __init__.py  conftest.py  test_alerting.py  test_backtest_export.py  test_backtest_news_filter.py  test_backtest_stats.py  test_daily_state_persistence.py  test_dependency_injection.py  test_engulfing_detector_bearish.py  test_engulfing_detector_bullish.py  test_engulfing_detector_quality.py  test_engulfing_detector_volume.py  test_fcr_detector_detect.py  test_fcr_detector_jpy.py  test_fcr_detector_scan.py  test_fill_verification.py  test_gap_detector_empty.py  test_gap_detector_spike.py  test_gap_detector_zone.py  test_graceful_shutdown.py  test_ib_error_codes.py  test_is_oos_split.py  test_loader_validation.py  test_market_order.py  test_ml_filter.py  test_monte_carlo.py  test_news_filter.py  test_order_manager_bracket.py  test_order_manager_lots.py  test_order_manager_validation.py  test_pair_correlation.py  test_position_manager.py  test_race_condition_multi_pair.py  test_random_baseline.py  test_reconnect.py  test_risk_check_interval.py  test_risk_manager_daily.py  test_risk_manager_sizing.py  test_risk_manager_slippage.py  test_sensitivity.py  (+14 more)
alphaedge/utils/: __init__.py  alerting.py  logger.py  news_filter.py  pair_correlation.py  session_manager.py  state_persistence.py  timezone.py  volatility_regime.py
docs/: ALPHAEDGE_MASTER_AUDIT.md
scripts/: _opt_run.py  _sl_sweep.py  install_task.bat  manage_task.bat  param_sweep.py  register_tasks_ADMIN.ps1  start_alphaedge.ps1  uninstall_task.bat
tasks/: lessons.md
