# ============================================================
# PROJECT      : ALPHAEDGE — FCR Forex Trading Bot
# FILE         : pyproject.toml
# DESCRIPTION  : Ruff, Pylance, Pytest configuration
# AUTHOR       : ALPHAEDGE Dev Team
# WORKFLOW     : VSCode + Claude + Copilot Pro + File Engineering
# PYTHON       : 3.11.9
# LAST UPDATED : 2026-03-07
# ============================================================

[build-system]
requires = ["setuptools>=68.0", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaedge"
version = "1.0.0"
description = "ALPHAEDGE — FCR Forex Trading Bot"
requires-python = ">=3.11,<3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["alphaedge*"]

# --- Ruff Configuration ---
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["alphaedge"]
exclude = [
    ".venv",
    "build",
    "dist",
    "*.pyx",
    "*.pxd",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["alphaedge"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# --- Pytest Configuration ---
[tool.pytest.ini_options]
testpaths = ["alphaedge/tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
norecursedirs = ["build", ".venv", "__pycache__", "*.egg-info", ".git"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

# --- Coverage Configuration ---
# Note: Cython .pyx modules (core/) are compiled to C extensions and cannot
# be measured by pytest-cov. Engine modules require IB Gateway for
# integration testing. Coverage scope includes config/ and utils/ which
# are testable without external dependencies.
[tool.coverage.run]
source = ["alphaedge"]
omit = [
    "alphaedge/engine/*",
    "alphaedge/logs/*",
    "alphaedge/tests/*",
    "alphaedge/core/_stubs/*",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]

# --- Type checking : Pyright (Pylance engine) ---
# Config lives in pyrightconfig.json at project root
